--- a/major_assignments/NCAAWomensSoccerData-main/data_analysis_project.Rmd
+++ b/major_assignments/NCAAWomensSoccerData-main/data_analysis_project.Rmd
@@ -7,21 +7,15 @@ library(tidyverse)
 library(lubridate)
 library(janitor)
 library(dplyr)
-```
-```{r}
-playerstats2022 <- read_csv("data/ncaa_womens_soccer_playerstats_2022.csv")
-playerstats2021 <- read_csv("data/ncaa_womens_soccer_playerstats_2021.csv")
-playerstats2020 <- read_csv("data/ncaa_womens_soccer_playerstats_2020.csv")
-
-matchstats2022 <- read_csv("data/ncaa_womens_soccer_matchstats_2022.csv")
-matchstats2021 <- read_csv("data/ncaa_womens_soccer_matchstats_2021.csv")
-matchstats2020 <- read_csv("data/ncaa_womens_soccer_matchstats_2020.csv")
-
+library(ggplot2)
+library(corrr)
+library(ggrepel)
+library(stringr)
 ```
 
 
 ```{r}
-
+### LOAD AND CLEAN DATA ###
 wsoccer_matchstat_2020 <- read_csv("data/ncaa_womens_soccer_matchstats_2020.csv", guess_max = 5000)
 
 wsoccer_matchstat_2021 <- read_csv("data/ncaa_womens_soccer_matchstats_2021.csv", guess_max = 5000)
@@ -43,9 +37,23 @@ wsoccer_teams_2021 <- read_csv("url_csvs/NCAA Women's Soccer - 2021.csv") %>%
 wsoccer_teams_2022 <- read_csv("url_csvs/NCAA Women's Soccer - 2022.csv") %>% 
   clean_names()
 
-# Find the column names, create a key
-col_names <- colnames(wsoccer_matchstat_2020)
+team_links_2020 <- read_csv("url_csvs/ncaa_womens_soccer_teamurls_2020.csv") %>% 
+  clean_names()
 
+team_links_2021 <- read_csv("url_csvs/ncaa_womens_soccer_teamurls_2021.csv") %>% 
+  clean_names()
+
+team_links_2022 <- read_csv("url_csvs/ncaa_womens_soccer_teamurls_2022.csv") %>% 
+  clean_names()
+
+# Create a column for the team number taken from the link
+team_links <- team_links_2020 %>% 
+  rbind(team_links_2021, team_links_2022) %>% 
+  distinct(school, .keep_all = TRUE) %>% 
+  mutate(team_id = str_extract(playerstatsurl, "(?<=team/).*?(?=/stats)"))
+
+# Find the column names, create a key
+# col_names <- colnames(wsoccer_matchstat_2020)
 # Data Dictionary: https://docs.google.com/spreadsheets/d/1lnEauTJ62LcCfWJdwIHUitD6Hai_-1YCDVsEbwiTSG8/edit#gid=0
 # Clean 2020 match data so that we can rbind()
 match_20 <- wsoccer_matchstat_2020 %>% 
@@ -69,42 +77,93 @@ match_all <- match_20 %>%
     home_away == "Home"~ 0,
     home_away == "Away"~ 1,
     TRUE ~ NA
+  )) %>% 
+  mutate(team = case_when(
+    team == "FDU Knights"~"Fairleigh Dickinson Knights",
+    team == "Kansas City Roos"~"Kansas City Kangaroos",
+    team == "Nebraska Huskers"~"Nebraska Cornhuskers",
+    team == "Houston Baptist Huskies"~"Houston Christian Huskies",
+    TRUE~team
   ))
 
 # Clean 2021 team data so that we can rbind()
 teams_21 <- wsoccer_teams_2021 %>% 
-  select(-so_g, -gwg, -games)
+  select(-so_g, -gwg, -games) %>% 
+  mutate(season = 2021) 
 
 # Clean 2022 team data so that we can rbind()
 teams_22 <- wsoccer_teams_2022 %>% 
-  select(-so_g, -gwg, -games)
+  select(-so_g, -gwg, -games) %>% 
+  mutate(season = 2022) 
 
 # Clean 2020 team data so that we can rbind()
-cols_20 <- names(wsoccer_teams_2020)
-
+# cols_20 <- names(wsoccer_teams_2020)
 teams_20 <- wsoccer_teams_2020 %>% 
-  select(url, institution, conference, goals, assists, -points, sh_att, fouls, red_cards, yellow_cards, gc, goal_app, ggs, goalie_min_plyd, ga, saves, shutouts, combined_sho, g_wins, g_loss, d_saves, corners, pk, pk_att)
+  select(url, institution, conference, goals, assists, -points, sh_att, fouls, red_cards, yellow_cards, gc, goal_app, ggs, goalie_min_plyd, ga, saves, shutouts, combined_sho, g_wins, g_loss, d_saves, corners, pk, pk_att) %>% 
+  mutate(season = 2020)
 
 # Clean 2020 player data so that we can rbind()
 players_20 <- wsoccer_playerstat_2020 %>% 
-  select(season, team, jersey, full_name, roster_name, first_name, last_name, yr, pos, gp, gs, goals, assists, points, sh_att, fouls, red_cards, yellow_cards, gc, goal_app, ggs, goalie_min_plyd, ga, gaa, saves, sv_pct, combined_sho, shutouts, g_wins, g_loss, d_saves, corners, pk, pk_att, gwg)
+  select(season, team, jersey, full_name, roster_name, first_name, last_name, yr, pos, gp, gs, goals, assists, points, sh_att, fouls, red_cards, yellow_cards, gc, goal_app, ggs, goalie_min_plyd, ga, gaa, saves, sv_pct, combined_sho, shutouts, g_wins, g_loss, d_saves, corners, pk, pk_att, gwg) %>% 
+  mutate(season = 2020) 
 
 # Clean 2021 player data so that we can rbind()
 players_21 <- wsoccer_playerstat_2021 %>% 
-  select(-so_g, -games)
+  select(-so_g, -games) %>% 
+  mutate(season = 2021) 
 
 # Clean 2022 player data so that we can rbind()
 players_22 <- wsoccer_playerstat_2022 %>% 
-  select(-so_g, -games)
+  select(-so_g, -games) %>% 
+  mutate(season = 2022) 
 
 # All players across three seasons
 players_all <- players_20 %>% 
-  rbind(players_21, players_22)
+  rbind(players_21, players_22) %>% 
+  mutate(team = case_when(
+    team == "FDU Knights"~"Fairleigh Dickinson Knights",
+    team == "Kansas City Roos"~"Kansas City Kangaroos",
+    team == "Nebraska Huskers"~"Nebraska Cornhuskers",
+    team == "Houston Baptist Huskies"~"Houston Christian Huskies",
+    TRUE~team
+  ))
 
 # All teams across three seasons
 all_teams <- teams_20 %>% 
- rbind(teams_21, teams_22)
+ rbind(teams_21, teams_22) %>% 
+  mutate(institution = case_when(
+    institution == "Albany (NY)"~"UAlbany",
+    institution == "Dixie St."~"Utah Tech",
+    TRUE~institution
+  ))
 
+# Regular expression of universities
+regex_unis <- regex(paste0("\\b", paste(unique(all_teams$institution), collapse = "\\b|\\b"), "\\b"))
+
+# Crosswalk of team name to mascot
+mascot_crosswalk <- players_all %>% 
+  distinct(team) %>% 
+  mutate(mascot = str_squish(sub(regex_unis, "", team)))
+
+# Crosswalk of team name, institution, mascot, conference
+team_crosswalk <- all_teams %>%
+  mutate(team_id = str_extract(url, "(?<=team/).*?(?=/)")) %>% 
+  distinct(institution, conference, season, .keep_all = TRUE) %>% 
+  left_join(team_links, by = "team_id") %>% 
+  left_join(mascot_crosswalk, by = c("school" = "team")) %>% 
+  select(institution, mascot, school, conference, team_id) %>% 
+  rename(team = school) %>% 
+    mutate(mascot = case_when(
+    institution == "VMI"~"Cadets",
+    TRUE~mascot
+  )) %>% 
+  filter(!is.na(mascot))
+
+# Previous crosswalk with seasons
+tc_season <- team_crosswalk %>% 
+  inner_join(all_teams, by = c("institution", "conference")) %>% 
+  distinct(institution, conference, season, .keep_all = TRUE) %>% 
+  select(institution:team_id, season)
 ```
 
 
@@ -127,6 +186,8 @@ Overall, further analysis of this would probably be the most newsworthy. While t
 
 ```{r}
 
+## We'll be talking on Tuesday about correlations - which share some similarities with t-tests - and I think those could be useful for you in determining how important those home field advantages are. You also could do some multiple regression to see if a combination of factors add up to a meaningful relationship (https://www.thescoop.org/sports/multipleregression.html). 
+
 matches_wld <- match_all %>% 
   # Group games by home/away and win-loss-draw for each team
   group_by(team, home_away, outcome) %>% 
@@ -137,6 +198,7 @@ matches_wld <- match_all %>%
   mutate(wld_ratio = paste0(Win, "-", Loss, "-",Draw)) %>% 
   # Create a column that shows the win percentage for home vs away games across all seasons
   mutate(win_percent = Win/(Win+Loss+Draw)*100)
+
 matches_compares <- match_all %>% 
   # Assign a numeric value to each outcome
   mutate(outcome = case_when(
@@ -146,6 +208,7 @@ matches_compares <- match_all %>%
     TRUE~NA
   )) %>% 
   group_by(team, home_away, ha_number) %>% 
+  # Create summary statistics for a variety of 
   summarize(
     w_l_d = mean(outcome),
     shutouts = sum(shutouts),
@@ -158,25 +221,35 @@ matches_compares <- match_all %>%
     goal_rate = sum(goals)/sum(sh_att),
   ) %>% 
   left_join(matches_wld, by = c("team", "home_away"))
+
 # Boxplots that show wins, yellow cards, and mean of fouls 
 boxplot(matches_compares$win_percent ~ matches_compares$home_away)
+
 boxplot(matches_compares$all_yellow ~ matches_compares$home_away)
+
 boxplot(matches_compares$foul_mean ~ matches_compares$home_away)
+
 # Separate dataframes into data by home and away games
 teams_home <- matches_compares %>% 
   filter(home_away == "Home")
 
 teams_away <- matches_compares %>% 
   filter(home_away == "Away")
+
 # T-Test to see home and away differences.
 t.test(teams_home$win_percent, teams_away$win_percent, paired=TRUE)
+
 t.test(teams_home$shutouts, teams_away$shutouts, paired=TRUE)
+
 t.test(teams_home$all_yellow, teams_away$all_yellow, paired=TRUE)
+
 t.test(teams_home$foul_mean, teams_away$foul_mean, paired=TRUE)
+
 # Look at correlations for some variables, including home/away, win percent, goal rate, mean fouls, and mean score
 matches_compares %>% 
-  select(ha_number, win_percent, goal_rate, foul_mean, score_mean) # %>% 
-   # correlate()
+  select(ha_number, win_percent, goal_rate, foul_mean, score_mean) %>% 
+  #correlate()
+
 # Look at a linear regression for win percent by home/away, goal rate and score mean. 
 summary(lm(matches_compares$win_percent ~ matches_compares$ha_number + matches_compares$goal_rate + matches_compares$score_mean))
 
@@ -196,81 +269,21 @@ Is there a significant relationship in performance and jersey number? Why are ce
 
 When we take the widest look at the data by jersey numbers, we see a huge drop from 160 players to only 80 between the 35th and 36th most popular number. The most popular jersey number overall is 17, with 402 players wearing that number. 17 is followed by 6, 4, 15, and a bunch of relatively low numbers (low being numbers under 20). However, when we look at what numbers equate to higher mean for game winning goals, the numbers increase, examples being 77, 41, 43, and 66. The number with the highest mean shot rate (mean of goals/shots attempted) is 44. It is not one of the more popular numbers, with only 16 players having that number. 
 
+
+QUESTION 2 UPDATED
+
 ```{r}
 
+# Dataframe of all players, only once per their jersey number
 player_dist <- players_all %>% 
-  distinct(roster_name, .keep_all = TRUE)
-nongk_player_by_jersey <- player_dist %>% 
-  filter(!str_detect(pos, "GK")) %>% 
-  group_by(jersey) %>% 
-  summarize(
-    num_players = n(),
-    mean_goals = mean(goals, na.rm = TRUE),
-    median_goals = median(goals, na.rm = TRUE),
-    mean_gwg = mean(gwg, na.rm = TRUE),
-    mean_shtrat = mean((goals/sh_att)*100, na.rm = TRUE),
-    mean_gp = mean(gp, na.rm = TRUE),
-    mean_fouls = mean(fouls, na.rm = TRUE)
-  )
-# Specifically collect statistics for any players who have jersey numbers 10, 11, 9, 7, and 23.
-player_filter <- players_all %>% 
-  filter(jersey == 10| jersey == 11| jersey == 9| jersey == 7| jersey == 23) %>% 
-  select(-full_name, -points, -red_cards:-corners)
+  distinct(roster_name, jersey, .keep_all = TRUE)
 
-# Look at the statistics for players outside of those jersey numbers
-player_anti <- players_all %>% 
-  filter(!(jersey == 10| jersey == 11| jersey == 9| jersey == 7| jersey == 23)) %>% 
-  select(-full_name, -points, -red_cards:-corners)
+gk_players <- player_dist %>% 
+  filter(str_detect(pos, "GK"))
 
-# Get some statistics for each jersey number we like
-jersey_players <- player_filter %>% 
-  # Asked Chat GPT: "How do I replace the NA values in every numeric column in a R dataframe with 0?"
-  mutate_if(is.numeric, ~replace(., is.na(.), 0)) %>% 
-  group_by(jersey) %>%
-  summarize(
-    mean_gp = mean(gp),
-    mean_goals = mean(goals),
-    median_goals = median(goals),
-    goal_shtrat = sum(goals)/sum(sh_att)*100,
-    mean_fouls = mean(fouls),
-    pk_success = sum(pk)/sum(pk_att)*100,
-    gwg = mean(gwg)
-  )
-# Get statistics for all other jersey numbers
-other_players <- player_anti %>% 
-  mutate_if(is.numeric, ~replace(., is.na(.), 0)) %>% 
-  group_by(jersey) %>%
-  summarize(
-    mean_gp = mean(gp),
-    mean_goals = mean(goals),
-    median_goals = median(goals),
-    goal_shtrat = sum(goals)/sum(sh_att)*100,
-    mean_fouls = mean(fouls),
-    pk_success = sum(pk)/sum(pk_att)*100,
-    gwg = mean(gwg)
-  )
-# Create a chart that shows which 
-jersey_chart <- nongk_player_by_jersey %>% 
-  ggplot(aes(x = num_players, y = mean_goals)) +
-  geom_point(size = 1, shape = 1, color = "black") + 
-  labs(
-    title = "Higher Jersey Numbers Are More of a Threat Near Goal",
-    x = "Number of Players",
-    y = "Mean Goals"
-  )
-jersey_chart
-player_zero <- player_dist %>% 
-  filter(jersey == 0)
-
-```
-```{r}
-
-player_dist <- players_all %>% 
-  distinct(roster_name, .keep_all = TRUE)
 # Exclude goalkeepers since their statistics seem to skew data a bit
-
 nongk_player_by_jersey <- player_dist %>% 
-  filter(!str_detect(pos, "GK")) %>% 
+  anti_join(gk_players) %>% 
   group_by(jersey) %>% 
   summarize(
     num_players = n(),
@@ -294,11 +307,10 @@ jersey_chart <- nongk_player_by_jersey %>%
 jersey_chart
 
 # Jersey numbers with over 300 distinct players
-
 over_threehund <- nongk_player_by_jersey %>%
   filter(num_players >= 300)
-# Players who use the jersey numbers mentioned above
 
+# Players who use the jersey numbers mentioned above
 pop_to_names <- over_threehund %>% 
   inner_join(player_dist, by = "jersey")
   
@@ -321,7 +333,20 @@ defenders_10 <- pop_to_names %>%
 
 so for the outcome we did a case when and string detected so that the losses are "0", the wins are "1", and the ties/draws are "0.5" 
 
-Upperclassmen vs Underclassmen: what years typically dominate the starting lineup in different conferences
+#Upperclassmen vs Underclassmen: what years typically dominate the starting lineup in different conferences
+
+
+Though we find that the teams who start a higher percentage of seniors that are on their roster have higher average goals scored, we have an interesting caviat to this. 197 teams out of the total 373 start more freshmen out of the freshmen that they have (52%). This was derived from the amount of rows in the top_under dataframe. This means that though teams who rely heavily on their senior class tend to have more goals, a majority of teams will use their freshmen. This is notable because out of one of the top conferences for women's soccer, the ACC, 7 of 14 teams play majority freshmen and sophomore, which is half of those teams in that conference. We think that this is significant because of the recent news in US women's soccer, where more youth players are getting professional contracts. The NWSL just started an "under-18" program, and Chloe Ricketts, a 15 year old, just became the youngest individual to join the NWSL under a professional contract. She's playing for the Washington Spirit. Just before that, Alyssa Thompson made history for being the first high school student to be drafted to the NWSL, and was drafted as No.1 overall pick to Angel City FC. She was also just called up to the USWNT senior roster for the 2023 Women's World Cup in Australia. Olivia Moultrie (17) and Jaedyn Shaw (18) are also major breakthrough young players who are expected to make some noise in the professional league. 
+
+We think this is interesting because it shows how rising youth talent is on the rise currently in women's soccer. We think it's interesting that as all of this is happening with young players entering the draft and being noticed/fostered by NWSL clubs, more college level teams are utilizing their younger players in their starting lineups from what they have in their rosters. Though these don't necessarily correlate, we think that it would also be worth testing to see how many high school seniors graduate a semester early to go play for their college teams in the spring before their freshman year. We say this because UMD women's soccer had 3 freshmen that graduated high school early to come to play with the team in the spring. If we had the data on how many high school seniors did this, maybe we could find a trend that points to this idea of younger players accelerating into higher levels of play faster than they used to. If we had this, we could do a t test or something to see how the number of hs seniors graduating early is correlated to a higher number of starting freshmen, and if it's statistically significant. Follow up question if we were to continue: does this "acceleration" contribute to more college underclassmen playing for their respective national teams? 
+
+Things to consider for this question though are that if teams changed conferences, the dataframe top_under includes them in both conferences which could be considered an issue. However, it accounts for a possible change in percent of which grade was played after they changed conferences. 
+
+https://www.goal.com/en-us/lists/us-girls-youth-soccer-system-uswnt-stars/blt3599216dee5320a7 
+
+https://www.cbsnews.com/colorado/news/chloe-ricketts-soccer-nwls-washington-spirit-15-year-old-player/
+
+https://www.cnn.com/2023/01/14/football/alyssa-thompson-us-soccer-profile-spt-intl/index.html
 
 ```{r}
 
@@ -336,27 +361,13 @@ team_unique <- all_teams %>%
     avg_shutouts = round(mean(shutouts),2),
     avg_fouls = round(mean(fouls),2)
   ) %>% 
-  distinct(institution, .keep_all = TRUE)
-
-regex_unis <- regex(paste(unique(all_teams$institution), collapse = "|"))
-
-player_team <- players_all %>% 
-  mutate(institution = str_extract(team, regex_unis)) %>% 
-  mutate(institution = case_when(
-    str_detect(team, "LMU \\(CA\\)")~"LMU (CA)",
-    str_detect(team, "Miami \\(FL\\)")~"Miami (FL)",
-    str_detect(team, "Miami \\(OH\\)")~"Miami (OH)",
-    str_detect(team, "Queens \\(NC\\)")~"Queens (NC)",
-    str_detect(team, "Saint Francis \\(PA\\)")~"Saint Francis (PA)",
-    str_detect(team, "Saint Mary's \\(CA\\)")~"Saint Mary's (CA)",
-    str_detect(team, "St. John's \\(NY\\)")~"St. John's (NY)",
-    str_detect(team, "St. Thomas \\(MN\\)")~"St. Thomas (MN)",
-    str_detect(team, "FDU")~"Fairleigh Dickinson",
-    TRUE~institution
-  )) %>% 
-  select(season:gs, institution, -pos, -full_name) %>%
+  inner_join(tc_season, by = c("institution", "conference")) %>% 
+  distinct(institution, conference, season, .keep_all = TRUE)
+  
+player_team <- players_all %>%
+  select(season:gs, team, -pos, -full_name) %>%
   left_join(games_per_seasonteam, by = c("season", "team")) %>% 
-  left_join(team_unique, by = "institution") %>% 
+  left_join(team_unique, by = c("team", "season")) %>% 
   rename(season_games = n)
 
 player_by_year <- player_team %>% 
@@ -401,8 +412,12 @@ start_play <- player_team %>%
   ) %>% 
   pivot_wider(names_from = "yr", values_from = "starter") %>% 
   select(institution, conference, Fr, So, Jr, Sr) %>% 
-  left_join(team_unique, by = c("institution", "conference"))
+  left_join(team_unique, by = c("institution", "conference")) %>% 
+  distinct(institution, conference, .keep_all = TRUE)
 
+top_under <- start_play %>% 
+  filter(So > 50 | Fr > 50)
+  
 conference_stats <- institution_year %>% 
   group_by(conference) %>% 
   summarize(
@@ -437,42 +452,104 @@ comp_eligible_played <- conference_stats %>%
 
 Team with the most shutouts vs team with most goals scored: which team is more successful on avg? Does the offense or defense performance impact match result more?
 
+#Analysis
+Obviously, teams that have a high mean shutouts and a high mean goals have a higher win percentage. Once we start to take a closer look and separate the teams out into multiple categories based on their shutouts and goals, we start to see a distinction between the impact of shutouts and goals on winning. 
+
+We looked specifically at Power 5 Schools, which is made up of schools that are in either the ACC, SEC, Big 10, Big 12 or Pac-12. In our graphic, we plotted the means of the average goals and average shutouts across the power 5. When we look at teams who perform above average on shutouts and below on goals as compared to teams who perform below average on shutouts and above on goals, we can see that the second case tends to have a higher win percent.
+
+Similarly, when looking at all teams (keeping in mind that teams in multiple conferences over the three years have multiple points), we see a similar trend. Teams needed to get shutouts for over half their matches to have a comparable win percent to teams scoring two goals a match. 
+
 
 ```{r}
-# I think another way of asking this question could be this: "Do teams that record the most shutouts really need to do so because they are not high-scoring teams?" As you've found there are plenty of high-scoring teams that record shutouts; are there low-scoring teams that do the same consistently? Would speak to style of play.
-
 team_wld <- match_all %>% 
   # Group games by home/away and win-loss-draw for each team
-  group_by(team, outcome) %>% 
+  group_by(team, outcome, season) %>% 
   count() %>% 
   pivot_wider(names_from = outcome, values_from = n) %>% 
   replace(is.na(.), 0) %>% 
-  # Create a column that has the Win-Loss-Draw ratio for the teams across all seasons
-  mutate(wld_ratio = paste0(Win, "-", Loss, "-",Draw)) %>% 
-  # Create a column that shows the win percentage for home vs away games across all seasons
-  mutate(win_percent = Win/(Win+Loss+Draw)*100)
+  left_join(tc_season, by = c("team", "season")) %>% 
+  clean_names()
 
 matches_od <- match_all %>%
-  group_by(team) %>% 
+  left_join(tc_season, by = c("team", "season")) %>% 
+  left_join(team_wld, by = c("team", "season", "conference", "institution", "mascot")) %>% 
+  group_by(team, conference) %>% 
   summarize(
     tot_shut = sum(shutouts),
     avg_shut = mean(shutouts),
     tot_goals = sum(goals),
-    avg_goals = mean(goals)
-  ) %>% 
-  left_join(team_wld, by = "team")
-hist(matches_od$win_percent ~ matches_od$avg_goals)
+    avg_goals = mean(goals),
+    win_percent = round(sum(win)/(sum(win)+sum(loss)+sum(draw))*100, 2)
+  )
   
+match_avg <- matches_od %>% 
+  ungroup() %>% 
+  summarise(
+    goal_avg = mean(avg_goals), 
+    shut_avg = mean(avg_shut)
+    )
+
 top_shut <- matches_od %>% 
   arrange(desc(avg_shut)) %>% 
-  head(100)
+  head(100) %>% 
+  mutate(status = "shutouts")
   
 top_goals <- matches_od %>% 
   arrange(desc(avg_goals)) %>% 
-  head(100)
-boxplot(top_shut$win_percent)
-boxplot(top_goals$win_percent)
-# team_goals <- team_unique %>%
+  head(100) %>% 
+  mutate(status = "goals")
+
+top_shut_nogoals <- matches_od %>% 
+  anti_join(top_goals) %>% 
+  arrange(desc(avg_shut)) %>% 
+  head(100) %>% 
+  mutate(status = "shutouts_not_goals")
+
+top_goal_noshut <- matches_od %>% 
+  anti_join(top_shut) %>% 
+  arrange(desc(avg_goals)) %>% 
+  head(100) %>% 
+  mutate(status = "goals_not_shutouts")
+
+pfive_avg <- matches_od %>%
+  filter(str_detect(conference, "ACC|SEC|Big Ten|Big 12|Pac-12")) %>% 
+  mutate(pfive = "yes") %>% 
+  group_by(pfive) %>% 
+  summarise(
+    goal_avg = mean(avg_goals), 
+    shut_avg = mean(avg_shut)
+    )
+
+stats_pfive <- matches_od %>% 
+  filter(str_detect(conference, "ACC|SEC|Big Ten|Big 12|Pac-12"))
+pfive_chart <- stats_pfive %>% 
+  ggplot +
+    geom_point(
+      aes(x = avg_goals, y = avg_shut, size = win_percent, color = conference),
+      alpha = .5
+      ) +
+  # geom_point(
+  #   data=inner_join(stats_pfive, top_shut_nogoals), 
+  #   aes(x = avg_goals, y = avg_shut, size = win_percent), 
+  #   color="red",
+  #   alpha = .5
+  #   ) + 
+  # geom_point(
+  #   data=inner_join(stats_pfive, top_goal_noshut), 
+  #   aes(x = avg_goals, y = avg_shut, size = win_percent, color), 
+  #   color="blue",
+  #   alpha = .5
+  #   ) + 
+  scale_size(range = c(1, 8), name="Win Percent") +
+  geom_vline(xintercept = pfive_avg$goal_avg) + 
+  geom_hline(yintercept = pfive_avg$shut_avg) +
+  labs(
+    title = "In Power 5 women's soccer, goals are more important than shutouts",
+    x = "Mean Goals",
+    y = "Mean Shutouts"
+  )
+  
+pfive_chart
   
 ```
 
@@ -481,8 +558,13 @@ boxplot(top_goals$win_percent)
 
 
 Success rate of different types of mascots: (animals, mythical creatures, humans, etc.)?
+#Analysis
+for the mascot list, it seems that when we look on it purely based on mascot, it looks like mythical teams seem to be the best overall in stats (besides shutouts). Nature teams seem to be fouled the most, and they're pretty across the board for all of them. Miscellaneous stats are slightly random because of the size of it. In mean goals, mythical comes out ahead slightly. If we actually look at how they compare to each other across all matches, (we look at win percent in reverse) teams wiht mascots of miscellaneous, nature and people have a 1/3 of winning against mythical teams. Animal has a 43% chance of winning against mythical, which is higher, but mythical usually wins out. Overall though, the majority of the matchups are pretty even, (40 or 50%) so it's not that much of a significance. If you're making a team, we'd recommend to go with a mythical mascot (just in case you go off of pure luck). We would want to see how certain animals or people do against each other (for example, eagles vs eagles and see whether certain matchups in the same category are significant).
+Caveat: the groups vary in size, so if a bunch of the animal teams (for example) do really poorly, it will reflect poorly on the whole group.
 
 ```{r}
+
+# If you're going to go down this road, then you absolutely should answer the matchup question (how well to animals do vs people, etc). Same for identical mascot name matchups - how often do they occur? You should get really creative here.
 
 team_sums <- all_teams %>%
   group_by(institution, conference) %>% 
@@ -493,26 +575,10 @@ team_sums <- all_teams %>%
   ) %>% 
   distinct(institution, .keep_all = TRUE)
 
-regex_unis <- regex(paste(unique(all_teams$institution), collapse = "|"))
-
 regex_peoplemascot <- regex("governors|braves|mountaineers|duke|knights|matadors|chippewas|buccaneers|49ers|vikings|raiders|flyers|pioneers|pirates|islanders|colonels|seminoles|paladins|colonials|crusaders|vandals|explorers|trojans|techsters|jaspers|minutewomen|cowgirls|warriors|spartans|racers|highlanders|midshipmen|cornhuskers|huskers|lumberjacks|norse|irish|rebels|quakers|pilots|friars|boilermakers|royals|ladyjacks|aztecs|toreros|dons|saints|hatters|texas|volunteers|cadets|gauchos|miners|vaqueros|trailblazers|cadets|commodores|cavaliers|musketeers|lancer|gael|beacon")
 
 mascot_list <- match_all %>% 
-  mutate(institution = str_extract(team, regex_unis)) %>% 
-  ## Asked CHATGPT: "How do I extract everything after a certain pattern in R?"
-  mutate(mascot = str_squish(sub(regex_unis, "", team))) %>% 
-  mutate(institution = case_when(
-    str_detect(team, "LMU \\(CA\\)")~"LMU (CA)",
-    str_detect(team, "Miami \\(FL\\)")~"Miami (FL)",
-    str_detect(team, "Miami \\(OH\\)")~"Miami (OH)",
-    str_detect(team, "Queens \\(NC\\)")~"Queens (NC)",
-    str_detect(team, "Saint Francis \\(PA\\)")~"Saint Francis (PA)",
-    str_detect(team, "Saint Mary's \\(CA\\)")~"Saint Mary's (CA)",
-    str_detect(team, "St. John's \\(NY\\)")~"St. John's (NY)",
-    str_detect(team, "St. Thomas \\(MN\\)")~"St. Thomas (MN)",
-    str_detect(team, "FDU")~"Fairleigh Dickinson",
-    TRUE~institution
-  )) %>% 
+  left_join(tc_season, by = c("team", "season")) %>% 
   group_by(team, mascot, institution) %>% 
   summarize(
     tot_yc = sum(yellow_cards)
@@ -528,7 +594,6 @@ mascot_list <- match_all %>%
   )) %>% 
   replace(is.na(.), 0) 
 
-
 by_mascot <- mascot_list %>% 
   group_by(mas_category) %>% 
   summarize(
@@ -541,12 +606,29 @@ by_mascot <- mascot_list %>%
 
 
 boxplot(mascot_list$tot_goals ~ mascot_list$mas_category)
+
+
 boxplot(mascot_list$tot_shutouts ~ mascot_list$mas_category)
 
 
+#mascot_matches <- mascot_list %>% 
+  #inner_join(match_all, by = c("team"))
 
+#match_all_test <- match_all %>%
+  #group_by(opponent) %>%
+  #summarise(count = n()) 
+
+
+mas_outcomes <- match_all %>%
+  select(outcome, team, opponent, opponent_id, team_id) %>%
+  left_join(mascot_list, by = c("team"))
+
+team_crosswalk_and_outcomes <- mas_outcomes %>%
+  left_join(team_crosswalk, by = c("opponent_id", "team_id"))
 
 ```
+
+
 
 url is different in all_teams
 distinct 
@@ -569,30 +651,22 @@ miscellaneous: sugar bears, big red, big green, purple aces, crimson, pride, Fig
 
 
 
-```{r}
-
-
-```
-
-
-  
-
-
-```
-
-
 
 #Used chat GPT: asked how to extract everything in a certain pattern in R: and we used gsub function to extract only the mascot names and make it into a separate column, then str_squish to get rid of extraneous spaces
 
+## Overall Reflections
 
+Overall, there were a lot more complications than anticipated in this project. We dealt with a lot of different chaos in terms of the teams not being standardized and having to find unique ways of connecting dataframes. 
 
-#Limitations:
-Some stats in 2020 arent present in 2021 or 2022
-we don't have conferences
-2020 only had certain conferences playing/fewer players playing 
-
-
-
+## Caveats and Limitations:
+- Some statistics in 2020 are not present in 2021 and 2022, and vice versa
+- We do not have data about the teams as a whole (i.e. what division they are in, what conference they are in)
+- 2020 had only some conferences playing matches since it was during COVID, also fewer players so some may have redshirted, opted-out, etc.
+- Matches are not classified at playoff games or normal games, so we would need to check the dates.
+- No game count or shots on goal data for 2020 players, not sure if this was a scrape problem or something else.
+- Data in Question 4 was divided by conference and team. If teams changed conferences, especially when moving up to a harder one, they have two datapoints in the chart, and one is often extremely small.
+- Due to various lacks of standardization, some answers may not be completely accurate. We tried our best to standardize everything, but it is possible that we missed something.
+- Some team data may have been lost while trying to join datasets that were not super friendly with each other
 
 
 
